Changes made in path handling, some minor optimizations, language file updated

--- a/admirorFrames/en-GB.plg_content_admirorframes.ini
+++ b/admirorFrames/en-GB.plg_content_admirorframes.ini
@@ -1,4 +1,4 @@
-ADMIRORFRAMESDESCRIPTION="Put content You need to be in a frame inside trigger code, for example: {AG}<i>Your Content</i>{/AG}."
+PLG_CONTENT_ADMIRORFRAMES_XML_DESCRIPTION="Put content You need to be in a frame inside trigger code, for example: {AG}<i>Your Content</i>{/AG}."
 
 AF_TEMPLATE_LABEL="Template"
 AF_TEMPLATE_DESC="Select frame "
@@ -10,7 +10,7 @@ AF_COLORIZE_LABEL="Colorize Color #"
 AF_COLORIZE_DESC="Enter color for colorize filter, 6 digits hex code, without # character. Leave empty for disabling colorize filter"
 AF_WIDTH_LABEL="Frame Width"
 AF_WIDTH_DESC="Enter frame width, including px or %."
-AF_HEIGHT_LABEL="Frame Padding"
+AF_HEIGHT_LABEL="Frame Height"
 AF_HEIGHT_DESC="Enter frame height, including px or %."
 AF_MARGIN_LABEL="Frame Margin"
 AF_MARGIN_DESC="Enter margin size with px."
