Reworked class code, try to fix language labels, still problems... Fixed description

--- a/admirorFrames/en-GB.plg_content_admirorframes.ini
+++ b/admirorFrames/en-GB.plg_content_admirorframes.ini
@@ -1,4 +1,9 @@
-PLG_CONTENT_ADMIRORFRAMES_XML_DESCRIPTION="Put content You need to be in a frame inside trigger code, for example: {AG}<i>Your Content</i>{/AG}."
+; @version		1.0
+; @package		Admiror Frames (plugin)
+; @author    	Igor Kekeljevic & Nikola Vasiljevski, 2011.
+; @license		GNU/GPL license: http://www.gnu.org/copyleft/gpl.html
+
+PLG_CONTENT_ADMIRORFRAMES_XML_DESCRIPTION="Put content You need to be in a frame inside trigger code, for example: {AF}<i>Your Content</i>{/AF}."
 
 AF_TEMPLATE_LABEL="Template"
 AF_TEMPLATE_DESC="Select frame "
@@ -23,4 +28,4 @@ AF_VERTALIGN_DESC="Select vertical align."
 AF_FLOAT_LABEL="Float"
 AF_FLOAT_DESC="Select float align. For example if You need frames inline, use Float:left."
 AF_SHOWSIGNATURE_LABEL="Show Signature"
-AF_SHOWSIGNATURE_DESC="Show Admiror Gallery label on bottom of the gallery."
+AF_SHOWSIGNATURE_DESC="Show Admiror Frames label on bottom of the article."
